updated skills list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li>I know how to play with my dog toys</li>
       <li>I dont poop in the house</li>
       <li>I love kibble</li>
+      <li> I love both of my parents !! </li>
     </ul>
   </body>
 </html>
